# MLOps-Quarto-Project

./: .env.example  .gitignore  QUICKSTART.md  README.md  SIMPLIFICATION_COMPLETE.md  SIMPLIFICATION_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: config.yaml  model_config.yaml
dashboards/: dashboard.qmd  deployment.qmd  master-styles.scss
dashboards/components/: model_metrics.qmd  predictions.qmd
data/: raw
infra/db/: init.sql
notebooks/: exploration.ipynb
scripts/: create_sample_data.py
src/data/: __init__.py  preprocessing.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  predict.py  train.py  train_mlflow.py
src/utils/: __init__.py  helpers.py
tests/: test_models.py
